# build123-mcp

./: .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  PROMPT.md  README.md  SPEC.md  default_prompt.md  glama.json  llms.md  pyproject.toml  research.md  security.md  server.json  server.py  session.py
.github/workflows/: ci.yml  publish.yml
src/build123d_mcp/: bd_warehouse_resource.py  drafting_cookbook.py  presentation_cookbook.py  quickref.py  security.py  selectors_cookbook.py  server.py  session.py  worker.py
src/build123d_mcp/tools/: _paths.py  cross_sections.py  diff.py  execute.py  export.py  health_check.py  import_step.py  inspect_drawing.py  interference.py  last_error.py  library.py  lint_drawing.py  list_objects.py  measure.py  render.py  render_drawing.py  repair_hints.py  session_state.py  shape_compare.py  validate_code.py  view_axes.py
tests/: test_bd_warehouse_resource.py  test_drafting_cookbook.py  test_drawing_tooling.py  test_inspect_drawing.py  test_library.py  test_outcomes.py  test_packaging.py  test_presentation_cookbook.py  test_quickref.py  test_selectors_cookbook.py  test_session_resource.py  test_tools.py
tools/: export.py  measure.py  render.py
